# ai_framework_infer

./: .gitignore  CMakeLists.txt  README.md  main.cpp
test/: CMakeLists.txt  test_first.cpp  test_main.cpp
